@@ -1,6 +1,8 @@
 package stats.client;
 
-import org.springframework.http.*;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 import stats.dto.StatsHitDto;
@@ -8,9 +10,9 @@ import stats.dto.StatsViewDto;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.List;
 
+@Component
 public class StatsClientImpl implements StatsClient {
 
     private static final DateTimeFormatter FORMATTER =
@@ -19,16 +21,26 @@ public class StatsClientImpl implements StatsClient {
     private final RestTemplate restTemplate;
     private final String serverUrl;
 
-    public StatsClientImpl(String serverUrl) {
+    public StatsClientImpl(
+            @Value("${stats-server.url}") String serverUrl,
+            RestTemplateBuilder builder
+    ) {
         this.serverUrl = serverUrl;
-        this.restTemplate = new RestTemplate();
+        this.restTemplate = builder.build();
     }
 
     @Override
-    public void hit(StatsHitDto hitDto) {
+    public void hit(String app, String uri, String ip) {
+        StatsHitDto dto = StatsHitDto.builder()
+                .app(app)
+                .uri(uri)
+                .ip(ip)
+                .timestamp(LocalDateTime.now())
+                .build();
+
         restTemplate.postForEntity(
                 serverUrl + "/hit",
-                hitDto,
+                dto,
                 Void.class
         );
     }
@@ -38,24 +50,23 @@ public class StatsClientImpl implements StatsClient {
             LocalDateTime start,
             LocalDateTime end,
             List<String> uris,
-            boolean unique) {
-
+            boolean unique
+    ) {
         UriComponentsBuilder builder =
                 UriComponentsBuilder.fromHttpUrl(serverUrl + "/stats")
                         .queryParam("start", start.format(FORMATTER))
                         .queryParam("end", end.format(FORMATTER))
                         .queryParam("unique", unique);
 
-        if (uris != null && !uris.isEmpty()) {
+        if (uris != null) {
             uris.forEach(uri -> builder.queryParam("uris", uri));
         }
 
-        ResponseEntity<StatsViewDto[]> response =
-                restTemplate.getForEntity(
-                        builder.toUriString(),
-                        StatsViewDto[].class
-                );
+        StatsViewDto[] response = restTemplate.getForObject(
+                builder.toUriString(),
+                StatsViewDto[].class
+        );
 
-        return Arrays.asList(response.getBody());
+        return response == null ? List.of() : List.of(response);
     }
 }
